--- a/index.html
+++ b/index.html
@@ -64,9 +64,16 @@
             "fontName": "Mali",
             "color": "#ff0019",
             "messages": [
-              "ĐOÀN NGỌC ANH",
-              "I LOVE YOU",
+              "Trinh Thị Thùy Linh",
+              "happy birthday",
               "ĐỊT CON MẸ MÀY"
+              "Trinh Thị Thùy Linh",
+              "I LOVE YOU"
+              "ANH YEU EM"
+              "MÃI MÃI MỘT TÌNH YÊU"
+              "❤️"
+              "Tấn Phát ❤️ Thùy Linh"
+              
             ],
             "music": "https://www.youtube.com/watch?v=rCKzH0VPVMM"
           },
