--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             "messages": [
               "Trinh Thị Thùy Linh",
               "happy birthday",
-              "ĐỊT CON MẸ MÀY"
+              "HAPPY BIRTHDAY"
               "Trinh Thị Thùy Linh",
               "I LOVE YOU"
               "ANH YEU EM"
